# pyMEA

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: analysis_example.json
data/: DATA.md
data/metadata/: batch_example.csv
scripts/: launch_gui.py  run_analysis.py  run_batch.py
src/pymea/: __init__.py  core.py  export.py  io.py  pipeline.py
src/pymea/analysis/: __init__.py  batch.py  beat_detection.py  field_potential_duration.py  pacemaker.py
src/pymea/exploratory/: __init__.py
src/pymea/gui/: __init__.py  app.py
src/pymea/stats/: __init__.py  powerlaw.py
