[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMEA"
version = "0.1.0"
description = "Cardiomyocyte microelectrode-array analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "colorama>=0.4",
  "lmfit>=1.0",
  "matplotlib>=3.5",
  "numba>=0.54",
  "numpy>=1.20",
  "openpyxl>=3.0",
  "pandas>=1.3",
  "powerlaw>=1.5",
  "PyQt5>=5.15",
  "scikit-learn>=1.0",
  "scipy>=1.7",
  "seaborn>=0.11",
  "statsmodels>=0.13",
  "sympy>=1.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
